render books from server

--- a/src/page-style/Home.module.css
+++ b/src/page-style/Home.module.css
@@ -34,5 +34,8 @@
   outline: none;
 }
 .books {
-    margin-top: 20px;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
 }
