--- a/src/page-style/Home.module.css
+++ b/src/page-style/Home.module.css
@@ -35,7 +35,6 @@
 }
 .books {
   margin-top: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
