--- a/src/component/Modal/Modal.module.css
+++ b/src/component/Modal/Modal.module.css
@@ -6,6 +6,10 @@
   height: 80%;
   width: 30%;
 }
+.error {
+    color: red;
+    margin-bottom: 10px;
+  }
 .form {
   background-color: var(--wt);
   height: 100%;
